Added location add and edit page with tests
